chore: agent and native testing for `graalvm` module
Signed-off-by: Sam Gammon <sam@elide.ventures>